--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,21 +1,22 @@
 cmake_minimum_required(VERSION 3.4.1)
-
 SET(CMAKE_C_FLAGS_DEBUG "-g")
 SET(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG")
 
+#当前库的外部依赖库
 SET(NLOGGER_NATIVE_DEPENDENCE ../nlogger-native)
+#当前库需要呗一起编译进去的的源码文件
 SET(SOURCE_FILE src/main/jni/nlogger_native_interface.h
         src/main/jni/nlogger_native_interface.c
-        src/main/jni/nlogger_android_log_util.h
+        src/main/jni/nlogger_android_log.h
         src/main/jni/nlogger.h
         src/main/jni/nlogger.c)
 
-find_library( # Sets the name of the path variable.
-        log-lib
-
-        # Specifies the name of the NDK library that
-        # you want CMake to locate.
-        log)
+#find_library( # Sets the name of the path variable.
+#        log-lib
+#
+#        # Specifies the name of the NDK library that
+#        # you want CMake to locate.
+#        log)
 
 include_directories(${NLOGGER_NATIVE_DEPENDENCE})
 
@@ -23,7 +24,7 @@ add_subdirectory(${NLOGGER_NATIVE_DEPENDENCE} .out)
 
 add_library(nlogger SHARED ${SOURCE_FILE})
 
-target_link_libraries(nlogger ${log-lib} z nlogger-native)
+target_link_libraries(nlogger log z nlogger-native)
 
 
 if (${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")
