--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+#org.gradle.java.home=/Users/nier/Java/jdk-11.0.3.jdk/Contents/Home
