--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    api "com.squareup.okhttp3:okhttp:3.8.0"
+    api "com.squareup.retrofit2:retrofit:2.3.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
 }
